maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:20: error: not found: value count
  count=count+1
  ^PledgeMaze:23: error: not found: value count
    count=count-1
    ^PledgeMaze:29: error: not found: value count
      count=count-1
      ^PledgeMaze:35: error: not found: value count
    count=count+1
    ^PledgeMaze:38: error: not found: value count
      count=count-1
      ^